# MacropadSoftware

./: DESIGN.md  README.md  design-preview.html  design-tokens.json  main.js  package-lock.json  package.json
.github/workflows/: release.yml
dev-tools/: prepare.py
docs/: ACTION-ENGINE.md  ARCHITECTURE.md  DEVICE-PROTOCOL.md  FIRMWARE-UPDATE.md  PLATFORM-SECURITY.md  PRODUCT.md  QUALITY-RELEASE.md  UI-UX.md
includes/: index.html
macropad-v3/: .gitignore  README.md  index.html  package-lock.json  package.json
macropad-v3/docs/: UPDATER.md
macropad-v3/firmware/: README.md  platformio.ini
macropad-v3/firmware/src/: bd2808.cpp  bd2808.h  main.cpp
macropad-v3/scripts/: Build-FirmwareRelease.ps1  Build-LocalWindowsRelease.ps1
macropad-v3/src/: App.css  App.test.tsx  App.tsx  main.tsx
macropad-v3/src-tauri/: Cargo.toml  tauri.conf.json
macropad-v3/src-tauri/icons/: icon.icns
macropad-v3/src-tauri/src/: actions.rs  lib.rs  main.rs  updater.rs
macropad-v3/src/components/: ActionLibrary.test.tsx  ActionLibrary.tsx  BindingInspector.tsx  DeviceCanvas.tsx  DeviceCenter.tsx  LightingStudio.tsx  OledStudio.tsx  VirtualButtonInspector.tsx  VirtualDeck.tsx  actionIcon.test.ts  actionIcon.ts
macropad-v3/src/domain/: actions.ts  defaultProfile.ts  deviceLayout.test.ts  deviceLayout.ts  firmware.ts  profile.ts  (+1 more)
plans/: IMPLEMENTATION-PLAN.md
renderer/preload/: renderer.js
renderer/static/: index.js  main.css  main.html  modules.js
scripts/: actionhandler.js  actions.js  connection.js  firmwareupdater.js  interprocess.js  serial.js  updater.js  window.js
(+6 files in other folders)
