[package]
name = "macropad-v3"
version = "3.0.1"
description = "Cross-platform configuration software for the MacroPad"
authors = ["MacroPad project"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "macropad_v3_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2.6"
enigo = "0.6.1"
open = "5.4"
base64 = "0.22"
espflash = { version = "4.5.0", default-features = false, features = ["serialport"] }
futures-util = "0.3"
minisign-verify = "0.2"
reqwest = { version = "0.13", features = ["json", "stream"] }
serialport = "4.9"
semver = "1"
sha2 = "0.11"
tauri-plugin-updater = "2.10"
url = "2"
zip = { version = "4.6.1", default-features = false, features = ["deflate"] }

[target.'cfg(windows)'.dependencies]
windows = { version = "0.61", features = ["Win32_Media_Audio", "Win32_Media_Audio_Endpoints", "Win32_System_Com"] }
